# ChangeLog for app-backup/holland
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jan 2011; <alunduil@gentoo.org> holland-1.0.6.ebuild:
  Stabilizing holland

*holland-1.0.6 (12 Jan 2011)

  12 Jan 2011; <alunduil@gentoo.org> +holland-1.0.6.ebuild:
  Adding holland 1.0.6

*holland-1.0.5 (17 Dec 2010)

  17 Dec 2010; <alunduil@gentoo.org> +holland-1.0.5.ebuild:
  Adding holland-1.0.5

  03 Oct 2010; <alunduil@gentoo.org> -holland-1.0.2-r9.ebuild,
  -holland-1.0.2-r10.ebuild:
  Removing version 1.0.2

*holland-1.0.4-r2 (24 Aug 2010)

  24 Aug 2010; <alunduil@gentoo.org> +holland-1.0.4-r2.ebuild:
  Removing example backupset configurations

  22 Aug 2010; <alunduil@gentoo.org> holland-1.0.2-r9.ebuild,
  holland-1.0.2-r10.ebuild, holland-1.0.4.ebuild, holland-1.0.4-r1.ebuild,
  holland-9999.ebuild:
  Adding proper ebuilds for holland
